<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Question2Activity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="687dp" app:srcCompat="@drawable/background"
            android:id="@+id/imageViewBackground"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/main_background"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp" app:srcCompat="@drawable/pic_q2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageViewQuestionPic" app:layout_constraintHorizontal_bias="0.0"
            android:contentDescription="@string/question_pic" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewQ2"/>
    <TextView
            android:text="@string/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textViewQ2" android:textSize="24sp"
            android:textColor="@color/colorHeadline"
            tools:text="@string/question2"/>
    <ImageView
            android:layout_width="380dp"
            android:layout_height="61dp" app:srcCompat="@drawable/my_shape"
            android:id="@+id/imageViewCheckBoxBG1" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/imageViewQuestionPic"
            android:contentDescription="@string/check_box_background"/>
    <CheckBox
            android:onClick="buttonProcessing"
            android:textColor="@color/colorPrimary"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/answer21"
            android:layout_width="350dp"
            android:layout_height="61dp"
            android:id="@+id/checkBoxQ21" android:textSize="24sp" android:checked="false"
            tools:text="@string/answer21"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCheckBoxBG1"
            app:layout_constraintStart_toStartOf="@+id/imageViewCheckBoxBG1"
            app:layout_constraintTop_toTopOf="@+id/imageViewCheckBoxBG1"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewCheckBoxBG1" android:textAlignment="center"/>
    <ImageView
            android:layout_width="380dp"
            android:layout_height="61dp" app:srcCompat="@drawable/my_shape"
            android:id="@+id/imageViewCheckBoxBG2"
            android:contentDescription="@string/check_box_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCheckBoxBG1"/>
    <CheckBox
            android:onClick="buttonProcessing"
            android:textColor="@color/colorPrimary"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/answer22"
            android:layout_width="350dp"
            android:layout_height="61dp"
            android:id="@+id/checkBoxQ22" android:textSize="24sp" android:checked="false"
            tools:text="@string/answer22"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCheckBoxBG2"
            app:layout_constraintStart_toStartOf="@+id/imageViewCheckBoxBG2"
            app:layout_constraintTop_toTopOf="@+id/imageViewCheckBoxBG2"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewCheckBoxBG2" android:textAlignment="center"/>
    <ImageView
            android:layout_width="380dp"
            android:layout_height="61dp" app:srcCompat="@drawable/my_shape"
            android:id="@+id/imageViewCheckBoxBG3"
            android:contentDescription="@string/check_box_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCheckBoxBG2"/>
    <CheckBox
            android:onClick="buttonProcessing"
            android:textColor="@color/colorPrimary"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/answer23"
            android:layout_width="350dp"
            android:layout_height="61dp"
            android:id="@+id/checkBoxQ23" android:textSize="24sp" android:checked="false"
            tools:text="@string/answer23"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCheckBoxBG3"
            app:layout_constraintStart_toStartOf="@+id/imageViewCheckBoxBG3"
            app:layout_constraintTop_toTopOf="@+id/imageViewCheckBoxBG3"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewCheckBoxBG3" android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>